<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">GPSProject</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="longitude">Longitude: </string>
    <string name="latitude">Latitude:</string>
    <string name="longitude_text" />
    <string name="latitude_text" />
    <string name="location_not_available">Location not available</string>
    <string name="point">%.4f</string>
    <string name="ringtone_mode">default</string>
    <string name="mode">Ringtone:</string>
    <string name="iniciar">Iniciar</string>
    <string name="parar">Parar</string>
    <string name="label">Serviço parado</string>
    <string name="title_activity_iniciar_servico">IniciarServico</string>
    <string name="title_activity_main__screen">Main_Screen</string>
    <string name="ambiente">Ambiente</string>
    <string name="settings">Settings</string>
    <string name="title_activity_screen_ccadastro">Cadastrar Ambiente</string>
    <string name="lat_gps">Latitude:</string>
    <string name="lon_gps">Longitude:</string>
    <string name="nome">Nome:</string>
    <string name="raio">Raio:</string>
    <string name="perfil">Perfil:</string>
    <string name="title_ambiente_list">Ambientes</string>
    <string name="title_ambiente_conf">config</string>
    <string name="call">CallLocation</string>
    <string name="desc">Description</string>

    <string-array name="ringtone_modes">
        <item>Normal</item>
        <item>Silent</item>
        <item>Vibrate</item>
    </string-array>

    <string name="btSave">Save</string>
    <string name="btCancel">Cancel</string>
    <string name="label_mts">0 mts</string>
    <string name="title_activity_home">Home</string>
    <string name="tbl_nome">Nome</string>
    <string name="tbl_raio">Raio</string>
    <string name="title_activity_app_testes">AppTestes</string>
    <string name="lb_ambiente">Ambiente</string>
    <string name="lb_settings">Settings</string>
    <string name="bt_remove">Remove</string>
    <string name="title_activity_settings_viewer">SettingsViewer</string>
    <string name="iniciar_service">Servico</string>
    <string name="service_box">servico</string>
    <string name="title_activity_configs_service">ConfigsService</string>

</resources>
