<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".view.Screen_ccadastro" >

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView4"
        android:layout_below="@+id/textView4"
        android:layout_marginTop="34dp"
        android:paddingTop="20dp"
        android:textColor="#FFFFFF"
        android:text="@string/perfil" />

    <EditText
        android:id="@+id/editTextLatitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView1"
        android:layout_marginLeft="17dp"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="none" />

    <TextView
        android:id="@+id/cad_nome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextNome"
        android:layout_below="@+id/editTextLongitude"
        android:layout_marginTop="14dp"
        android:textColor="#FFFFFF"
        android:text="@string/nome" />

    <EditText
        android:id="@+id/editTextNome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextLongitude"
        android:layout_below="@+id/cad_nome"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="none" />

    <EditText
        android:id="@+id/editTextRaio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextNome"
        android:layout_below="@+id/textView4"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="number" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextRaio"
        android:layout_below="@+id/editTextNome"
        android:layout_marginTop="15dp"
        android:textColor="#FFFFFF"
        android:text="@string/raio" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextLongitude"
        android:layout_below="@+id/editTextLatitude"
        android:textColor="#FFFFFF"
        android:layout_marginTop="16dp"
        android:text="@string/lon_gps" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextLatitude"
        android:layout_alignParentTop="true"
        android:layout_marginTop="31dp"
         android:textColor="#FFFFFF"
        android:text="@string/lat_gps" />

    <EditText
        android:id="@+id/editTextLongitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextLatitude"
        android:layout_below="@+id/textView2"
        android:background="#FFFFFF"
        android:ems="10"
        android:inputType="none" />

    <Spinner
        android:id="@+id/spinner_ringtone"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/editTextRaio"
        android:layout_alignTop="@+id/textView5"
        android:layout_toRightOf="@+id/textView2"
        android:paddingBottom="10dp" />

    <Button
        android:id="@+id/btSave"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView2"
        android:layout_alignTop="@+id/btCancel"
        android:background="#BEBEBE"
        android:text="@string/btSave"
        android:textColor="#FFFFFF" />

    <Button
        android:id="@+id/btCancel"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/spinner_ringtone"
        android:layout_centerHorizontal="true"
        android:background="#BEBEBE"
        android:text="@string/btCancel"
        android:textColor="#FFFFFF" />

    <ImageButton
        android:id="@+id/btRemove"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignRight="@+id/spinner_ringtone"
        android:layout_alignTop="@+id/btCancel"
        android:src="@drawable/remove" 
        android:contentDescription="@string/desc"
        android:visibility="invisible"/>

</RelativeLayout>