<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/longitude"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <TextView
        android:id="@+id/label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="34dp"
        android:text="@string/label" />

    <Button
        android:id="@+id/iniciar_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/label"
        android:layout_below="@+id/label"
        android:layout_marginTop="33dp"
        android:text="@string/iniciar" />

    <Button
        android:id="@+id/parar_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/iniciar_bt"
        android:layout_alignRight="@+id/iniciar_bt"
        android:layout_below="@+id/iniciar_bt"
        android:layout_marginTop="18dp"
        android:text="@string/parar" />
   
</RelativeLayout>
