<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#708090"
    tools:context=".Home" >

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toLeftOf="@+id/textView1"
        android:contentDescription="@string/iniciar"
        android:src="@drawable/boss" />

    <ImageButton
        android:id="@+id/btnSettings"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/btnAmbiente"
        android:layout_marginRight="25dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/abort" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/imageView1"
        android:layout_centerHorizontal="true"
        android:text="@string/call" 
        android:textColor="#FFFAFA"/>

    <ImageButton
        android:id="@+id/btnAmbiente"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/imageView1"
        android:layout_marginLeft="38dp"
        android:layout_marginTop="62dp"
        android:contentDescription="@string/desc"
        android:src="@drawable/clock" 
        />

</RelativeLayout>
